test/negative/profile_removed_idiomatic/Main.hx
class Main {
	static function main():Void {
		Sys.println("profile-check");
	}
}
